2011-05-10  Abhishek Arya  <inferno@chromium.org>

        Unreviewed.

        Chromium rebaselines.

        * platform/chromium-gpu-linux/media/video-transformed-expected.png:
        * platform/chromium-gpu-mac/media/video-transformed-expected.png:
        * platform/chromium-gpu-win/media/video-transformed-expected.png:

2011-05-10  Anton D'Auria  <adauria@apple.com>

        Reviewed by David Levin.

        StorageTracker should report actual local storage usage on disk
        https://bugs.webkit.org/show_bug.cgi?id=60558

        * storage/domstorage/localstorage/storagetracker/storage-tracker-6-create-expected.txt: Added.
        * storage/domstorage/localstorage/storagetracker/storage-tracker-6-create.html: Added.
        * storage/domstorage/localstorage/storagetracker/storage-tracker-7-usage-expected.txt: Added.
        * storage/domstorage/localstorage/storagetracker/storage-tracker-7-usage.html: Added.

2011-05-10  Anton D'Auria  <adauria@apple.com>

        Reviewed by Alexey Proskuryakov.

        Add ApplicationCache API to get disk usage per origin
        https://bugs.webkit.org/show_bug.cgi?id=57127

        * http/tests/appcache/origin-usage-expected.txt: Added.
        * http/tests/appcache/origin-usage.html: Added.
        * http/tests/appcache/resources/origin-usage-iframe-1.html: Added.
        * http/tests/appcache/resources/origin-usage-iframe-1.manifest: Added.
        * http/tests/appcache/resources/origin-usage-iframe-2.html: Added.
        * http/tests/appcache/resources/origin-usage-iframe-2.manifest: Added.
        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac-wk2/Skipped:
        * platform/qt/Skipped:

2011-05-10  Adam Klein  <adamk@chromium.org>

        Reviewed by David Levin.

        LayoutTest demonstrating that filesystem: URLs are not cached in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=58854

        Regression test for http://crbug.com/79539.
