@@ -1,0 +1,7 @@
+CONSOLE MESSAGE: line 0: Exception in toString().
+CONSOLE MESSAGE: line 0: Exception in toString().
+Test that browser won't crash if inspector is opened for a page that fails to convert alert() argument to string. The test passes if it doesn't crash. Bug 60541
+
+Page reloaded.
+Exception in toString().
+
