@@ -1,0 +1,25 @@
+<html>
+<head>
+<script src="../../http/tests/inspector/inspector-test.js"></script>
+<script src="../../http/tests/inspector/console-test.js"></script>
+<script>
+alert({toString: function() { throw "Exception in toString()."; }});
+</script>
+<script>
+function test()
+{
+    InspectorTest.reloadPage(function() {
+        InspectorTest.dumpConsoleMessages();
+        InspectorTest.completeTest();
+    });
+}
+</script>
+</head>
+<body onload="runTest()">
+<p>
+Test that browser won't crash if inspector is opened for a page that fails to convert
+alert() argument to string. The test passes if it doesn't crash.
+<a href="https://bugs.webkit.org/show_bug.cgi?id=60541">Bug 60541</a>
+</p>
+</body>
+</html>
